@startuml GrauB Architecture

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle

struct Material {
    +ka: vec3
    +kd: vec3
    +ks: vec3
    +ns: float
    +texName: string
}

struct PointLight {
    +position: vec3
    +color: vec3
    +intensity: float
}

struct AnimationPath {
    +controlPoints: vector<vec3>
    +waypointIndex: int
    +segmentProgress: float
    +speed: float
    +update(dt: float)
    +currentPosition(): vec3
    +addWaypoint(point: vec3)
}

struct SceneObject {
    +name: string
    +vertexArrayObject: GLuint
    +vertexCount: int
    +material: Material
    +textureID: GLuint
    +position: vec3
    +rotation: vec3
    +scale: float
    +selected: bool
    +hasAnimation: bool
    +animation: AnimationPath
    +modelMatrix(): mat4
}

struct Scene {
    +objects: vector<SceneObject>
    +lights: vector<PointLight>
    +selectedIndex: int
    +selectNext()
    +selectPrev()
    +selected(): SceneObject&
}

class Camera {
    +pos: vec3
    +front: vec3
    +up: vec3
    +yaw: float
    +pitch: float
    +fov: float
    +near: float
    +far: float
    +speed: float
    +sensitivity: float
    +viewMatrix(): mat4
    +projectionMatrix(aspect: float): mat4
    +processKeyboard(window: GLFWwindow*, dt: float)
    +processMouse(xpos: double, ypos: double)
    +processScroll(yoffset: double)
}

class Window {
    +window: GLFWwindow*
    +Window(width, height, title)
    +shouldClose(): bool
    +swapBuffers()
    +pollEvents()
}

class ShaderProgram {
    +id: GLuint
    +ShaderProgram(vertPath, fragPath)
    +use()
    +setMat4(name, value)
    +setVec3(name, value)
    +setFloat(name, value)
    +setInt(name, value)
}

class PhongShader {
    +PhongShader(vertPath, fragPath)
    +setLights(lights: vector<PointLight>)
    +setMaterial(material: Material)
    +setCameraPos(pos: vec3)
    +setSelectionBrightness(b: float)
}

note as MeshNote
    Free functions in Mesh.h:
    loadSimpleOBJ(path, nVertices, mtlFile): GLuint
    loadMTL(path): Material
    loadTexture(path): GLuint
end note

note as LoaderNote
    Free function in SceneLoader.h:
    loadScene(scenePath, assetsDir, scene, camera)
end note

class InputHandler <<static>> {
    +mode: AppMode
    +onKey(window, key, action, mods, scene, camera)
    +onMouseMove(xpos, ypos, camera)
    +onScroll(yoffset, camera)
    +processHeldKeys(window, dt, scene, camera)
    +showCrosshair(): bool
}

PhongShader --|> ShaderProgram

Scene "1" *-- "many" SceneObject
Scene "1" *-- "many" PointLight
SceneObject "1" *-- "1" Material
SceneObject "1" *-- "1" AnimationPath

LoaderNote ..> Scene : fills
LoaderNote ..> Camera : fills
MeshNote ..> SceneObject : feeds

InputHandler ..> Scene : mutates
InputHandler ..> Camera : mutates

@enduml
